rnsc/tests/snapshots/error-parser-mangled_name_directive-outside_inner.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that .mangled_name outside inner body is detected.
; Expected error: E-007 (unexpected token in class body)

.class public MyClass
.super java/lang/Object

.mangled_name SomeName

.class_end
----- STDERR -----
[E-007] Error: unexpected directive class body
   ╭─[ test_data/rns_integration/error/parser/mangled_name_directive/outside_inner.rns:7:1 ]
   │
 7 │ .mangled_name SomeName
   │ ──────┬──────  
   │       ╰──────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-007
───╯
----- JAVAP -----
not generated
